--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ constantly==23.10.4
 cryptography==44.0.2
 daphne==4.1.2
 Django==5.2
+django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 gunicorn==23.0.0
