--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "@fullcalendar/timegrid": "^6.1.15",
         "@fullcalendar/vue3": "^6.1.15",
         "@headlessui/vue": "^1.7.3",
+        "@primeuix/themes": "^1.0.3",
         "@suadelabs/vue3-multiselect": "^1.0.2",
         "@vuelidate/core": "^2.0.0",
         "@vuelidate/validators": "^2.0.0",
@@ -26,9 +27,11 @@
         "easymde": "^2.18.0",
         "file-upload-with-preview": "^4.2.0",
         "highlight.js": "^11.3.1",
+        "jwt-decode": "^4.0.0",
         "maska": "^3.0.3",
         "path": "^0.12.7",
         "pinia": "^2.2.4",
+        "primevue": "^4.3.3",
         "sweetalert2": "^11.5.1",
         "swiper": "^11.1.9",
         "tippy.vue": "^3.2.1",
@@ -53,6 +56,7 @@
     },
     "devDependencies": {
         "@intlify/unplugin-vue-i18n": "^4.0.0",
+        "@primevue/auto-import-resolver": "^4.3.3",
         "@rollup/plugin-alias": "^5.1.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.7",
@@ -61,6 +65,7 @@
         "postcss": "^8.4.35",
         "tailwindcss": "^3.4.1",
         "typescript": "^5.5.4",
+        "unplugin-vue-components": "^28.5.0",
         "vite": "^5.4.0",
         "vue-tsc": "^2.0.29"
     }
