--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "vite --host 0.0.0.0 --port 5173",
         "build": "vue-tsc --noEmit && vite build",
         "preview": "vite preview"
     },
@@ -26,6 +26,7 @@
         "axios": "^1.9.0",
         "easymde": "^2.18.0",
         "file-upload-with-preview": "^4.2.0",
+        "fs": "^0.0.1-security",
         "highlight.js": "^11.3.1",
         "jwt-decode": "^4.0.0",
         "maska": "^3.0.3",
