--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
         "fs": "^0.0.1-security",
         "highlight.js": "^11.3.1",
         "jwt-decode": "^4.0.0",
+        "lucide-vue-next": "^0.518.0",
         "maska": "^3.0.3",
         "path": "^0.12.7",
         "pinia": "^2.2.4",
